--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,53 @@
-div {
-  border: red solid 1px;
+body {
+  background-color: #ededed;
 }
 
+header {
+  text-align: center;
+  border: black solid 1px;
+  margin: 1em;
+  box-shadow: 3px 3px;
+  background-color: white;
+}
+
+/* footer {
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  border: black solid 1px;
+  margin: 1em;
+  box-shadow: 3px 3px;
+  background-color: white;
+} */
+
+footer {
+  /* margin-top: 2em; */
+  text-align: center;
+  background-color: white;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  font-size: 1.2em;
+  /* color: white; */
+  /* padding: 0.5em; */
+}
+
+
+#matchList {
+  font-size: 1.6em;
+  text-align: center;
+}
 .Test {
-  background-color: yellow;
+  background-color: #00BFFF;
+  border: black solid 1px;
+  margin: 1em;
+  box-shadow: 3px 3px;
 }
 
 .ODI {
-  background-color: pink;
+  background-color: #00FA9A;
+  border: black solid 1px;
+  margin: 1em;
+  box-shadow: 3px 3px;
 }
